--- a/index.html
+++ b/index.html
@@ -10,10 +10,31 @@
     <section class="conteudo-principal">
         <h2 class="titulo-principal">Meus Objetivos nos proximos anos<span>_</span></h2>
 <div class="botoes">
-        <button class="botao ativo">passar na faculdade</button>
-        <button class="botao">ter estabilidade financeira</button>
-        <button class="botao">ir bem na academia</button>
- </div>
+        <button class="botao ativo">me formar</button>
+        <button class="botao">ter uma casa</button>
+        <button class="botao">me casar</button>
+        <button class="botao ativo"></button>
+</div>
+<div class="abas-textos">
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Estudar 4 cursos na Alura</h3>
+        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+    </div>
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Criar 5 projetos em Javascript</h3>
+        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+    </div>
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Criar um portfolio com os meus 3 melhores projetos</h3>
+        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+    </div>
+    <div class="aba-conteudo">
+        <h3 class="aba-conteudo-titulo-principal">Atualizar meu curriculo com os certificados da Alura</h3>
+        <h4 class="aba-conteudo-titulo-secundario">Tempo para completar o objetivo</h4>
+    </div>
+</div>
+
+
 </section>
 <script src="main.js"></script>
 </body>
